--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -117,6 +117,10 @@ jobs:
             "NEXT_PUBLIC_TYPESENSE_PROTOCOL=${{ vars.NEXT_PUBLIC_TYPESENSE_PROTOCOL }}"
             "NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME=${{ vars.NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME }}"
             "NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=${{ vars.NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY }}"
+          secrets: |
+            "KEYSTATIC_GITHUB_CLIENT_ID=${{ secrets.K8S_SECRET_KEYSTATIC_GITHUB_CLIENT_ID }}"
+            "KEYSTATIC_GITHUB_CLIENT_SECRET=${{ secrets.K8S_SECRET_KEYSTATIC_GITHUB_CLIENT_SECRET }}"
+            "KEYSTATIC_SECRET=${{ secrets.K8S_SECRET_KEYSTATIC_SECRET }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
