feat: add working groups

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
 		"build": "next build",
 		"dev": "next dev",
+		"content:populate": "dotenv -c -- tsx ./scripts/cms/create-cms-content.ts",
 		"format:check": "prettier . \"!./@(content|public)/**\" --cache --cache-location ./.prettiercache --check",
 		"format:fix": "pnpm run format:check --write",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
@@ -52,10 +53,12 @@
 		"@opentelemetry/sdk-logs": "^0.53.0",
 		"@react-aria/utils": "^3.27.0",
 		"@shikijs/rehype": "^1.29.1",
+		"@sindresorhus/slugify": "^2.2.1",
 		"@vercel/otel": "^1.10.0",
 		"client-only": "^0.0.1",
 		"date-fns": "^4.1.0",
 		"fast-glob": "^3.3.3",
+		"gray-matter": "^4.0.3",
 		"image-dimensions": "^2.3.0",
 		"instantsearch.js": "^4.77.3",
 		"lucide-react": "^0.468.0",
@@ -114,7 +117,6 @@
 		"eslint-config-flat-gitignore": "^0.3.0",
 		"eslint-plugin-check-file": "^2.8.0",
 		"globals": "^15.14.0",
-		"gray-matter": "^4.0.3",
 		"is-ci": "^3.0.1",
 		"js-yaml": "^4.1.0",
 		"lint-staged": "^15.4.2",
