--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
 		"lint:styles:fix": "pnpm run lint:styles:check --fix",
 		"typesense:transform-cms-content": "tsx ./scripts/typesense/process-cms-content.ts",
 		"typesense:create-collection": "dotenv -c -- tsx ./scripts/typesense/create-collection.ts",
+		"typesense:get-sshoc-data": "tsx ./scripts/typesense/get-sshoc-data.ts",
 		"typesense:upload-documents": "dotenv -c -- tsx ./scripts/typesense/upload-documents.ts",
-		"typesense:populate": "run-s typesense:create-collection typesense:transform-cms-content typesense:upload-documents",
+		"typesense:populate": "run-s typesense:create-collection typesense:transform-cms-content typesense:get-sshoc-data typesense:upload-documents",
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "run-s setup",
 		"setup": "is-ci || simple-git-hooks",
