chore: update eslint config to support tailwind v4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
 	"editor.rulers": [100],
 	"editor.stickyScroll.enabled": true,
 	"eslint.enable": true,
+	"eslint.options": {
+		"flags": ["unstable_native_nodejs_ts_config"]
+	},
 	"eslint.validate": ["javascript", "typescript", "typescriptreact"],
 	"files.associations": {
 		"*.css": "tailwindcss"
