--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"format:fix": "pnpm run format:check --write",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
 		"lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
-		"lint:code:check": "eslint . --cache",
+		"lint:code:check": "eslint . --flag unstable_native_nodejs_ts_config",
 		"lint:code:fix": "pnpm run lint:code:check --fix",
 		"lint:styles:check": "stylelint \"./**/*.css\" --cache --ignore-path ./.gitignore",
 		"lint:styles:fix": "pnpm run lint:styles:check --fix",
@@ -86,12 +86,12 @@
 		"valibot": "1.0.0-beta.14"
 	},
 	"devDependencies": {
-		"@acdh-oeaw/eslint-config": "^2.0.6",
-		"@acdh-oeaw/eslint-config-next": "^2.0.12",
-		"@acdh-oeaw/eslint-config-node": "^2.0.6",
-		"@acdh-oeaw/eslint-config-playwright": "^2.0.7",
-		"@acdh-oeaw/eslint-config-react": "^2.0.7",
-		"@acdh-oeaw/eslint-config-tailwindcss": "^2.0.8",
+		"@acdh-oeaw/eslint-config": "^2.0.9",
+		"@acdh-oeaw/eslint-config-next": "^2.0.16",
+		"@acdh-oeaw/eslint-config-node": "^2.0.9",
+		"@acdh-oeaw/eslint-config-playwright": "^2.0.10",
+		"@acdh-oeaw/eslint-config-react": "^2.0.11",
+		"@acdh-oeaw/eslint-config-tailwindcss": "^3.0.0",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.0.5",
 		"@acdh-oeaw/tsconfig": "^1.3.0",
@@ -115,10 +115,10 @@
 		"dotenv": "^16.4.7",
 		"dotenv-cli": "^7.4.4",
 		"dotenv-expand": "^12.0.1",
-		"eslint": "^9.18.0",
-		"eslint-config-flat-gitignore": "^0.3.0",
-		"eslint-plugin-check-file": "^2.8.0",
-		"globals": "^15.14.0",
+		"eslint": "^9.37.0",
+		"eslint-config-flat-gitignore": "^2.1.0",
+		"eslint-plugin-check-file": "^3.3.0",
+		"globals": "^16.4.0",
 		"is-ci": "^3.0.1",
 		"js-yaml": "^4.1.0",
 		"lint-staged": "^15.4.2",
@@ -138,7 +138,6 @@
 		"tailwindcss-react-aria-components": "^1.2.0",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.24.1",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
 		"vfile": "^6.0.3",
@@ -158,7 +157,7 @@
 	},
 	"lint-staged": {
 		"*.@(js|ts|tsx)": [
-			"eslint --cache --fix",
+			"eslint --fix --flag unstable_native_nodejs_ts_config",
 			"prettier --cache --cache-location ./.prettiercache --write"
 		],
 		"*.@(css)": [
