--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
 		"@react-types/shared": "^3.27.0",
 		"@tailwindcss/postcss": "^4.1.14",
-		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/hast": "^3.0.4",
 		"@types/js-yaml": "^4.0.9",
 		"@types/mdast": "^4.0.4",
@@ -134,9 +134,9 @@
 		"strip-markdown": "^6.0.0",
 		"stylelint": "^16.13.2",
 		"tailwindcss": "^4.1.14",
-		"tailwindcss-animate": "^1.0.7",
-		"tailwindcss-react-aria-components": "^1.2.0",
+		"tailwindcss-react-aria-components": "^2.0.1",
 		"tsx": "^4.19.2",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.7.3",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
