chore: add scripts for starting/stopping local typesense instance

--- a/.env.local.example
+++ b/.env.local.example
@@ -30,8 +30,8 @@ NEXT_PUBLIC_MATOMO_BASE_URL="https://matomo.acdh.oeaw.ac.at"
 # KEYSTATIC_GITHUB_CLIENT_SECRET=
 # KEYSTATIC_SECRET=
 # NEXT_PUBLIC_KEYSTATIC_GITHUB_APP_SLUG=
-# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME=
-# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="acdh-oeaw"
+# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_NAME="dariah-website"
+# NEXT_PUBLIC_KEYSTATIC_GITHUB_REPO_OWNER="dariah-eric"
 # NEXT_PUBLIC_KEYSTATIC_MODE="github"
 
 # -------------------------------------------------------------------------------------------------
@@ -45,9 +45,17 @@ NEXT_PUBLIC_MATOMO_BASE_URL="https://matomo.acdh.oeaw.ac.at"
 # -------------------------------------------------------------------------------------------------
 # typesense
 # -------------------------------------------------------------------------------------------------
-NEXT_PUBLIC_TYPESENSE_HOST=
-NEXT_PUBLIC_TYPESENSE_PORT=
-NEXT_PUBLIC_TYPESENSE_PROTOCOL=
-NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME=
+# local
+NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME="dariah-website"
+NEXT_PUBLIC_TYPESENSE_HOST="localhost"
+NEXT_PUBLIC_TYPESENSE_PORT="8108"
+NEXT_PUBLIC_TYPESENSE_PROTOCOL="http"
+NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=
+TYPESENSE_ADMIN_API_KEY=
+# production
+NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME="dariah-website"
+NEXT_PUBLIC_TYPESENSE_HOST="typesense.acdh-dev.oeaw.ac.at"
+NEXT_PUBLIC_TYPESENSE_PORT="443"
+NEXT_PUBLIC_TYPESENSE_PROTOCOL="https"
 NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=
 TYPESENSE_ADMIN_API_KEY=
