--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 	"scripts": {
 		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
 		"build": "next build",
-		"dev": "next dev",
 		"content:populate": "dotenv -c -- tsx ./scripts/cms/create-cms-content.ts",
+		"dev": "next dev",
+		"dev:typesense:down": "docker compose --env-file=./.env.local down --volumes",
+		"dev:typesense:up": "docker compose --env-file=./.env.local up --detach",
 		"format:check": "prettier . \"!./@(content|public)/**\" --cache --cache-location ./.prettiercache --check",
 		"format:fix": "pnpm run format:check --write",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
@@ -20,11 +22,6 @@
 		"lint:code:fix": "pnpm run lint:code:check --fix",
 		"lint:styles:check": "stylelint \"./**/*.css\" --cache --ignore-path ./.gitignore",
 		"lint:styles:fix": "pnpm run lint:styles:check --fix",
-		"typesense:transform-cms-content": "tsx ./scripts/typesense/process-cms-content.ts",
-		"typesense:create-collection": "dotenv -c -- tsx ./scripts/typesense/create-collection.ts",
-		"typesense:get-sshoc-data": "tsx ./scripts/typesense/get-sshoc-data.ts",
-		"typesense:upload-documents": "dotenv -c -- tsx ./scripts/typesense/upload-documents.ts",
-		"typesense:populate": "run-s typesense:create-collection typesense:transform-cms-content typesense:get-sshoc-data typesense:upload-documents",
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "run-s setup",
 		"setup": "is-ci || simple-git-hooks",
@@ -36,6 +33,11 @@
 		"test:e2e:ui": "playwright test --ui",
 		"test:e2e:update-snapshots": "playwright test --update-snapshots",
 		"types:check": "tsc --noEmit",
+		"typesense:create-collection": "dotenv -c -- tsx ./scripts/typesense/create-collection.ts",
+		"typesense:get-sshoc-data": "tsx ./scripts/typesense/get-sshoc-data.ts",
+		"typesense:populate": "run-s typesense:create-collection typesense:transform-cms-content typesense:get-sshoc-data typesense:upload-documents",
+		"typesense:transform-cms-content": "tsx ./scripts/typesense/process-cms-content.ts",
+		"typesense:upload-documents": "dotenv -c -- tsx ./scripts/typesense/upload-documents.ts",
 		"validate": "run-p format:check lint:check types:check test test:e2e"
 	},
 	"dependencies": {
