--- a/.env.local.example
+++ b/.env.local.example
@@ -53,9 +53,9 @@ NEXT_PUBLIC_TYPESENSE_PROTOCOL="http"
 NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=
 TYPESENSE_ADMIN_API_KEY=
 # production
-NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME="dariah-website"
-NEXT_PUBLIC_TYPESENSE_HOST="typesense.acdh-dev.oeaw.ac.at"
-NEXT_PUBLIC_TYPESENSE_PORT="443"
-NEXT_PUBLIC_TYPESENSE_PROTOCOL="https"
-NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=
-TYPESENSE_ADMIN_API_KEY=
+# NEXT_PUBLIC_TYPESENSE_COLLECTION_NAME="dariah-website"
+# NEXT_PUBLIC_TYPESENSE_HOST="typesense.acdh-dev.oeaw.ac.at"
+# NEXT_PUBLIC_TYPESENSE_PORT="443"
+# NEXT_PUBLIC_TYPESENSE_PROTOCOL="https"
+# NEXT_PUBLIC_TYPESENSE_SEARCH_API_KEY=
+# TYPESENSE_ADMIN_API_KEY=
