--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 			"onFail": "download"
 		}
 	},
-	"packageManager": "pnpm@10.26.0",
+	"packageManager": "pnpm@10.26.1",
 	"scripts": {
 		"analyze": "next experimental-analyze --experimental-next-config-strip-types",
 		"build": "next build --experimental-next-config-strip-types",
@@ -31,6 +31,8 @@
 		"prepare": "run-s setup types:prepare",
 		"setup": "is-in-ci || simple-git-hooks",
 		"start": "next start --experimental-next-config-strip-types",
+		"storybook:build": "storybook build",
+		"storybook:dev": "storybook dev --no-open --port 6006",
 		"test:e2e": "playwright test --config ./e2e/playwright.config.ts",
 		"test:e2e:codegen": "playwright codegen",
 		"test:e2e:install": "playwright install --with-deps",
@@ -69,6 +71,7 @@
 		"@acdh-oeaw/eslint-config-node": "^2.0.11",
 		"@acdh-oeaw/eslint-config-playwright": "^2.0.13",
 		"@acdh-oeaw/eslint-config-react": "^3.0.3",
+		"@acdh-oeaw/eslint-config-storybook": "^4.0.0",
 		"@acdh-oeaw/eslint-config-tailwindcss": "^4.0.2",
 		"@acdh-oeaw/prettier-config": "^2.0.1",
 		"@acdh-oeaw/stylelint-config": "^2.3.2",
@@ -76,6 +79,7 @@
 		"@dotenvx/dotenvx": "^1.51.2",
 		"@next/eslint-plugin-next": "^16.1.0",
 		"@playwright/test": "^1.57.0",
+		"@storybook/nextjs-vite": "^10.1.10",
 		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "^24.10.4",
 		"@types/react": "^19.2.7",
@@ -96,20 +100,14 @@
 		"prettier": "^3.7.4",
 		"schema-dts": "^1.1.5",
 		"simple-git-hooks": "^2.13.1",
+		"storybook": "^10.1.10",
 		"stylelint": "^16.26.1",
 		"tailwindcss": "^4.1.18",
 		"tailwindcss-react-aria-components": "^2.0.1",
 		"tsx": "^4.21.0",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.9.3"
-	},
-	"browserslist": {
-		"development": [
-			"baseline newly available"
-		],
-		"production": [
-			"baseline widely available"
-		]
+		"typescript": "^5.9.3",
+		"vite": "^7.3.0"
 	},
 	"lint-staged": {
 		"*.@(js|ts|tsx)": [
