--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
 		"./next-env.d.ts",
 		".next/dev/types/**/*.ts",
 		".next/types/**/*.ts",
-		"./types/**/*.d.ts"
+		"./types/**/*.d.ts",
+		"./.storybook/**/*.ts",
+		"./.storybook/**/*.tsx"
 	],
 	"exclude": ["node_modules", "out", "public"]
 }
