--- a/.env.local.example
+++ b/.env.local.example
@@ -8,6 +8,7 @@
 
 NEXT_PUBLIC_APP_BASE_URL="http://localhost:3000"
 # imprint service
+NEXT_PUBLIC_APP_IMPRINT_CUSTOM_CONFIG="enabled"
 NEXT_PUBLIC_APP_IMPRINT_SERVICE_BASE_URL="https://imprint.acdh.oeaw.ac.at"
 NEXT_PUBLIC_APP_SERVICE_ID="25534"
 # web crawlers
