--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"lint:styles:check": "stylelint \"./styles/**/*.css\" --cache --ignore-path ./.gitignore",
 		"lint:styles:fix": "stylelint \"./styles/**/*.css\" --cache --fix --ignore-path ./.gitignore",
 		"prepare": "run-s setup types:prepare",
+		"search-index:api-keys:generate": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/generate-search-api-key.ts",
+		"search-index:collections:create": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/create-collection.ts",
+		"search-index:collections:seed": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/seed.ts",
 		"setup": "is-in-ci || simple-git-hooks",
 		"start": "next start --experimental-next-config-strip-types",
 		"storybook:build": "storybook build",
