--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"@dotenvx/dotenvx": "^1.51.2",
 		"@next/eslint-plugin-next": "^16.1.0",
 		"@playwright/test": "^1.57.0",
+		"@sindresorhus/slugify": "^3.0.0",
 		"@storybook/nextjs-vite": "^10.1.10",
 		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "^24.10.4",
