--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.2.1",
 		"@faker-js/faker": "^10.1.0",
+		"@internationalized/date": "^3.10.1",
 		"@opentelemetry/api": "^1.9.0",
 		"@react-aria/utils": "^3.32.0",
 		"@vercel/otel": "^2.1.0",
