feat: add api client

--- a/.env.local.example
+++ b/.env.local.example
@@ -17,6 +17,13 @@ NEXT_PUBLIC_APP_BOTS="disabled"
 ENV_VALIDATION="enabled"
 
 # =================================================================================================
+# api
+# =================================================================================================
+
+NEXT_PUBLIC_API_BASE_URL="https://dariah-knowledge-base-api.acdh-dev.oeaw.ac.at"
+NEXT_PUBLIC_API_OPENAPI_PATHNAME="/docs/openapi.json"
+
+# =================================================================================================
 # analytics
 # =================================================================================================
 
