--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -26,6 +26,8 @@ jobs:
         os: [ubuntu-24.04]
 
     env:
+      NEXT_PUBLIC_API_BASE_URL: "${{ vars.NEXT_PUBLIC_API_BASE_URL }}"
+      NEXT_PUBLIC_API_OPENAPI_PATHNAME: "${{ vars.NEXT_PUBLIC_API_OPENAPI_PATHNAME }}"
       NEXT_PUBLIC_APP_BASE_URL: "http://localhost:3000"
       NEXT_PUBLIC_APP_BOTS: "disabled"
       NEXT_PUBLIC_APP_IMPRINT_CUSTOM_CONFIG: "disabled"
