--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
 	"license": "MIT",
 	"type": "module",
 	"engines": {
-		"node": "^24"
+		"node": "24.x"
 	},
 	"devEngines": {
 		"runtime": {
 			"name": "node",
-			"version": "^24",
+			"version": "24.x",
 			"onFail": "download"
 		}
 	},
-	"packageManager": "pnpm@10.26.1",
+	"packageManager": "pnpm@10.28.2",
 	"scripts": {
 		"analyze": "next experimental-analyze --experimental-next-config-strip-types",
 		"build": "next build --experimental-next-config-strip-types",
@@ -22,16 +22,17 @@
 		"dev:services:up": "docker compose --env-file ./.env.local --file ./docker-compose.yaml up --detach",
 		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
 		"format:fix": "prettier . --cache --cache-location ./.prettiercache --check --write",
+		"generate:api": "dotenvx run -f ./.env.local --ignore MISSING_ENV_FILE -- tsx ./scripts/openapi/generate.ts",
 		"lint:check": "run-p --continue-on-error \"lint:*:check\"",
 		"lint:fix": "run-p --continue-on-error \"lint:*:fix\"",
 		"lint:code:check": "eslint . --flag unstable_native_nodejs_ts_config",
 		"lint:code:fix": "eslint . --fix --flag unstable_native_nodejs_ts_config",
 		"lint:styles:check": "stylelint \"./styles/**/*.css\" --cache --ignore-path ./.gitignore",
 		"lint:styles:fix": "stylelint \"./styles/**/*.css\" --cache --fix --ignore-path ./.gitignore",
-		"prepare": "run-s setup types:prepare",
-		"search-index:api-keys:generate": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/generate-search-api-key.ts",
-		"search-index:collections:create": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/create-collection.ts",
-		"search-index:collections:seed": "dotenvx run --env-file ./.env.local -- tsx ./scripts/search-index/seed.ts",
+		"prepare": "run-s setup types:prepare generate:api",
+		"search-index:api-keys:generate": "dotenvx run -f ./.env.local --ignore MISSING_ENV_FILE -- tsx ./scripts/search-index/generate-search-api-key.ts",
+		"search-index:collections:create": "dotenvx run -f ./.env.local --ignore MISSING_ENV_FILE -- tsx ./scripts/search-index/create-collection.ts",
+		"search-index:collections:seed": "dotenvx run -f ./.env.local --ignore MISSING_ENV_FILE -- tsx ./scripts/search-index/seed.ts",
 		"setup": "is-in-ci || simple-git-hooks",
 		"start": "next start --experimental-next-config-strip-types",
 		"storybook:build": "storybook build",
@@ -52,6 +53,7 @@
 		"@opentelemetry/api": "^1.9.0",
 		"@react-aria/utils": "^3.32.0",
 		"@vercel/otel": "^2.1.0",
+		"better-result": "^2.6.0",
 		"client-only": "^0.0.1",
 		"clsx": "^2.1.1",
 		"is-network-error": "^1.3.0",
@@ -101,6 +103,7 @@
 		"lint-staged": "^16.2.7",
 		"npm-run-all2": "^8.0.4",
 		"null-loader": "^4.0.1",
+		"openapi-typescript": "^7.10.1",
 		"prettier": "^3.7.4",
 		"schema-dts": "^1.1.5",
 		"simple-git-hooks": "^2.13.1",
